# C3NT1P3D3

./: ADD_ICON_GUIDE.md  ALL_MODULES_COMPLETE.md  BUILD_FIXES_SUMMARY.md  BlueKeepDetector.cpp  C3NT1P3D3.cpp  C3NT1P3D3.sln  C3NT1P3D3.vcxproj  C3NT1P3D3.vcxproj.filters  CHANGELOG.md  CMAKE_UPDATE.txt  CMakeLists.txt  CMakeLists_append.txt  CMakeLists_backup.txt  CMakeLists_production_addition.txt  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  COMPREHENSIVE_README.md  COMPREHENSIVE_UPGRADE_PLAN.md  CONTRIBUTING.md  CoreEngine.cpp  CoreEngine.h  DEMO_SCRIPT.md  DirectoryTraversalDetector.h  EternalBlueDetector.cpp  FINAL_FIX_SUMMARY.md  FINAL_MESSAGE.md  FINAL_STATUS.md  FINAL_UPDATE_SUMMARY.md  FIXES_APPLIED.md  IModule.h  LICENSE  Log4ShellDetector.cpp  Log4ShellDetector.h  MODULES_COMPLETED.md  MODULE_COMPLETION_STATUS.md  MockTarget.cpp  ModuleManager.cpp  NetworkScanner.cpp  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
config/: vulnerability_config.json
docs/: DEVELOPMENT_GUIDE.md
docs/features/: MITRE_ATTACK_SHOWCASE.md
docs/legal/: DISCLAIMER.md  LICENSE-AGREEMENT.md  README.md  TERMS-OF-SERVICE.md  Usage-Guidelines.md
docs/technical/: 20-MODULES-COMPLETE.md  Architecture-Overview.md  EternalBlue-Analysis.md  Heartbleed-Analysis.md  SQL-Injection-Analysis.md
include/: APIRateLimitDetector.h  BlueKeepDetector.h  CORSDetector.h  CSRFDetector.h  CloudMetadataDetector.h  CommandInjectionDetector.h  ComprehensiveScanner.h  ContainerEscapeDetector.h  DeserializationDetector.h  EternalBlueDetector.h  FTPAnonymousDetector.h  GraphQLInjectionDetector.h  HTTPRequestSmugglingDetector.h  HeartbleedDetector.h  HostHeaderInjectionDetector.h  IDORDetector.h  IExploit.h  IModule.h  IPRangeValidator.h  JWTDetector.h  LDAPInjectionDetector.h  MockTarget.h  ModuleManager.h  ModuleRegistry.h  ModuleResult.h  NetworkScanner.h  NetworkVulnerabilityDetector.h  NoSQLInjectionDetector.h  OAuthOIDCDetector.h  PrototypePollutionDetector.h  RaceConditionDetector.h  SNMPWeakCommunityDetector.h  SSHBruteForceDetector.h  SSRFDetector.h  SSTIDetector.h  Severity.h  ShellshockDetector.h  SubdomainTakeoverDetector.h  TelnetCleartextDetector.h  VulnerabilityDatabase.h  (+7 more)
include/core/: ConfigurationManager.h  LegalAgreementManager.h  ProductionScanner.h
include/mitre/: AttackMapper.h  AttackTechnique.h
include/security/: SecurityManager.h
include/simulation/: SimulationEngine.h
resources/: app.rc
scripts/: Test-ZeroLogon.ps1
src/: APIRateLimitDetector.cpp  BlueKeepDetector.cpp  C3NT1P3D3-Comprehensive.cpp  C3NT1P3D3-Production.cpp  C3NT1P3D3.cpp  CORSDetector.cpp  CSRFDetector.cpp  CloudMetadataDetector.cpp  CommandInjectionDetector.cpp  ComprehensiveScanner.cpp  ContainerEscapeDetector.cpp  CoreEngine.cpp  DeserializationDetector.cpp  DirectoryTraversalDetector.cpp  DirtyPipeDetector.cpp  DirtyPipeDetector.h  EternalBlueDetector.cpp  FTPAnonymousDetector.cpp  GraphQLInjectionDetector.cpp  HTTPRequestSmugglingDetector.cpp  HeartbleedDetector.cpp  HeartbleedDetector.cpp.bak  HostHeaderInjectionDetector.cpp  IDORDetector.cpp  IPRangeValidator.cpp  JWTDetector.cpp  LDAPInjectionDetector.cpp  LegalAgreementManager.cpp  Log4ShellDetector.cpp  ModuleManager.cpp  ModuleRegistry.cpp  NoSQLInjectionDetector.cpp  OAuthOIDCDetector.cpp  PrototypePollutionDetector.cpp  RaceConditionDetector.cpp  SNMPWeakCommunityDetector.cpp  SQLInjectionDetector.cpp  SSHBruteForceDetector.cpp  SSRFDetector.cpp  SSTIDetector.cpp  (+18 more)
src/core/: ConfigurationManager.cpp  ProductionScanner.cpp
src/mitre/: AttackMapper.cpp
src/scanners/: AdvancedWebScanner.cpp
src/simulation/: SimulationEngine.cpp
src/tests/: ZeroLogonDetectorTest.cpp  ZeroLogonTestHarness.cpp
test_release/docs/technical/: EternalBlue-Analysis.md
tests/: test_ip_validator.cpp
